[gd_scene load_steps=4 format=3 uid="uid://dk4vw3h3cybxr"]

[ext_resource type="Script" path="res://scripts/side_menu.gd" id="1_0xlvn"]
[ext_resource type="FontFile" uid="uid://bw6w243ojwjn6" path="res://assets/Main Menu/pixelmix.ttf" id="1_bjru1"]

[sub_resource type="Theme" id="Theme_kuy27"]

[node name="SideMenu" type="ColorRect"]
offset_right = 1420.0
offset_bottom = 660.0
color = Color(0, 0, 0, 0.705882)
script = ExtResource("1_0xlvn")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = 40.0
offset_right = 920.0
offset_bottom = 608.0
color = Color(0.921569, 0.705882, 0.470588, 1)

[node name="SaveButton" type="Button" parent="ColorRect2"]
layout_mode = 0
offset_left = 88.0
offset_top = 88.0
offset_right = 408.0
offset_bottom = 152.0
theme_override_fonts/font = ExtResource("1_bjru1")
theme_override_font_sizes/font_size = 25
text = "Save"

[node name="LoadButton" type="Button" parent="ColorRect2"]
layout_mode = 0
offset_left = 88.0
offset_top = 216.0
offset_right = 408.0
offset_bottom = 280.0
theme_override_fonts/font = ExtResource("1_bjru1")
theme_override_font_sizes/font_size = 25
text = "Load"

[node name="RestartButton" type="Button" parent="ColorRect2"]
layout_mode = 0
offset_left = 88.0
offset_top = 344.0
offset_right = 408.0
offset_bottom = 408.0
theme_override_fonts/font = ExtResource("1_bjru1")
theme_override_font_sizes/font_size = 25
text = "Restart"

[node name="QuitButton" type="Button" parent="ColorRect2"]
layout_mode = 0
offset_left = 88.0
offset_top = 472.0
offset_right = 408.0
offset_bottom = 536.0
theme = SubResource("Theme_kuy27")
theme_override_fonts/font = ExtResource("1_bjru1")
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="ExitMenuButton" type="Button" parent="ColorRect2"]
layout_mode = 0
offset_left = 424.0
offset_top = 16.0
offset_right = 472.0
offset_bottom = 64.0
theme_override_colors/icon_normal_color = Color(1, 0.827451, 0.654902, 1)
theme_override_fonts/font = ExtResource("1_bjru1")
theme_override_font_sizes/font_size = 20
text = "X"

[connection signal="pressed" from="ColorRect2/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="ColorRect2/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="ColorRect2/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="ColorRect2/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="ColorRect2/ExitMenuButton" to="." method="_on_exit_menu_button_pressed"]
